<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.suyash776.autobot.Joystick"
    android:background="@drawable/images">
    ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/down_Button"
        android:src="@drawable/downdown"
        android:contentDescription="@string/Down"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/up_Button"
        android:layout_alignStart="@+id/up_Button" />
    ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/up_Button"
        android:src="@drawable/upup"
        android:contentDescription="@string/Up"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/stop_Button"
        android:layout_alignStart="@+id/stop_Button"
        android:layout_marginBottom="72dp" />

    ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stop_Button"
        android:src="@drawable/stopstop"
        android:contentDescription="@string/Stop"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="147dp" />
    <EditText
        android:id="@+id/Box1"
        android:layout_width="110dip"
        android:layout_height="40dip"
        android:inputType="none"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible">

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Temprature in C"
        android:id="@+id/temprature"
        android:layout_below="@+id/Box1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Humidity in %"
        android:id="@+id/humidity"
        android:layout_above="@+id/editText_temprature"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Distance from obstacle:"
        android:id="@+id/ultrasonic"
        android:layout_below="@+id/editText_temprature"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Close Garage"
        android:id="@+id/stop_Button"
        android:layout_marginBottom="36dp"
        android:background="#ff00ffff"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/ultrasonic"
        android:layout_alignEnd="@+id/ultrasonic" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Open Garage"
        android:id="@+id/up_Button"
        android:background="#ff00ffff"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:layout_alignTop="@+id/stop_Button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:background="#fff0f0f0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_temprature"
        android:layout_below="@+id/temprature"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/stop_Button"
        android:layout_alignRight="@+id/temprature"
        android:layout_alignEnd="@+id/temprature"
        android:text="20.6" />

    <EditText
        android:background="#fff0f0f0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_humidity"
        android:layout_above="@+id/ultrasonic"
        android:layout_alignLeft="@+id/humidity"
        android:layout_alignStart="@+id/humidity"
        android:layout_alignRight="@+id/humidity"
        android:layout_alignEnd="@+id/humidity"
        android:text="22.8" />

    <EditText
        android:background="#fff0f0f0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_distance"
        android:layout_below="@+id/ultrasonic"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/temprature"
        android:layout_alignEnd="@+id/temprature"
        android:text="46.87" />


</RelativeLayout>
